Created custom Task Tags: //TODO-JDK9.
Began to identify code needing attention for JDK9. Removed XXX Task
Tags.